--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "MIT"
   ],
   "require": {
-    "php": "^8.1||^8.2||^8.3",
+    "php": "^8.1",
     "magento/framework": "*",
     "magento/module-catalog":  "*",
     "magento/module-customer": "*",
